--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<title>HomePage</title>
-<body>
-Hello world!!
-</body>
-</head>
+  <head>
+    <title>HomePage</title>
+  </head>
+  <body>
+    Hello world!!
+  </body>
+  <script src="./test.js" ></script>
 </html>
