--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <title>OpenVids</title>
 
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="./dist/css/adminlte.min.css">
 	<!-- Google Font: Source Sans Pro -->
