--- a/index.html
+++ b/index.html
@@ -149,19 +149,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <a asp-controller="Home" asp-action="Index" class="brand-link">
                 <img src="./dist/img/AdminLTELogo.png" alt="WebEx Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">WebEx</span>
+                <span class="brand-text font-weight-light">OpenVids</span>
             </a>
 
             <!-- Sidebar -->
             <div class="sidebar">
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    @*<div class="image">
+                    <div class="image">
                             <img src="./dist/img/boxed-bg.jpg" class="img-circle elevation-2" alt="User Image">
-                        </div>*@
-                    <div class="info">
-                        <a href="#" class="d-block">@User.Identity.Name</a>
-                    </div>
+                        </div>
                 </div>
 
                 <!-- Sidebar Menu -->
