--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="col-md-12">
             <div class="card card-outline card-info">
                 <div class="card-header">
-                    @*<h3 class="card-title">
+                    <h3 class="card-title">
                         Bootstrap WYSIHTML5
                         <small>Simple and fast</small>
-                    </h3>*@
+                    </h3>
                     <!-- tools box -->
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool btn-sm" data-card-widget="collapse" data-toggle="tooltip"
