--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <!-- Sidebar -->
             <div class="sidebar">
                 <!-- Sidebar user panel (optional) -->
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <!--<div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
                             <img src="./dist/img/boxed-bg.jpg" class="img-circle elevation-2" alt="User Image">
                         </div>
-                </div>
+                </div>-->
 
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
